Request time middleware.

--- a/VulcanizationAPI/nlog.config
+++ b/VulcanizationAPI/nlog.config
@@ -17,11 +17,14 @@
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 		<target xsi:type="File" name="exceptions" fileName="d:\net\VulcanizationAPILogs\nlog-AspNetCore-exceptions-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
+		<target xsi:type="File" name="request-time" fileName="d:\net\VulcanizationAPILogs\nlog-AspNetCore-request-time-${shortdate}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
 	<rules>
 		<logger name ="*" minlevel="Trace" writeTo="allfile"/>
 		<logger name ="VulcanizationAPI.*" minlevel="Error" writeTo="exceptions"/>
+		<logger name ="VulcanizationAPI.Middleware.RequestTimeMiddleware" minlevel="Trace" writeTo="request-time"/>
 	</rules>
 </nlog>
