Added JWT authentication.

--- a/VulcanizationAPI/appsettings.json
+++ b/VulcanizationAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DO_NOT_COPY_THIS",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "http://vulcanizationapi.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
