first part of the changes

--- a/VulcanizationAPI/VulcanizationAPI.csproj
+++ b/VulcanizationAPI/VulcanizationAPI.csproj
@@ -9,7 +9,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,7 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\VulcanizationAPI.Core\VulcanizationAPI.Core.csproj" />
+    <ProjectReference Include="..\VulcanizationDB\VulcanizationAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
